--- a/ConsoleApplication55/ConsoleApplication55.vcxproj.filters
+++ b/ConsoleApplication55/ConsoleApplication55.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Array.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StaffGenerator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="department.h">
@@ -123,6 +126,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="VisitationException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StaffGenerator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
